Fix assignee selector alignment

--- a/src/sentry/static/sentry/less/shared-components.less
+++ b/src/sentry/static/sentry/less/shared-components.less
@@ -782,13 +782,13 @@ table.integrations {
   }
 
   .avatar {
-    display: block;
+    display: inline-block;
     width: 24px;
     height: 24px;
     border-radius: 2px;
     position: relative;
     left: -2px;
-    float: left;
+    top: -1px;
   }
 
   .dropdown-toggle {
@@ -836,7 +836,7 @@ table.integrations {
     li a {
       padding: 5px 8px;
       display: block;
-      padding-left: 35px;
+      padding-left: 33px;
       position: relative;
       max-width: 100%;
       overflow: hidden;
@@ -847,6 +847,7 @@ table.integrations {
         margin-right: 5px;
         position: absolute;
         left: 8px;
+        top: 4px;
         .square(20px);
       }
     }
